update and add swaync

--- a/files/kitty/kitty.conf
+++ b/files/kitty/kitty.conf
@@ -5,8 +5,7 @@
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
-
-font_family      FiraCode Nerd Font Mono
+font_family     ComicShannsMono Nerd Font Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -24,7 +23,7 @@ font_family      FiraCode Nerd Font Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 13
 
 #: Font size (in pts)
 
@@ -47,7 +46,7 @@ font_family      FiraCode Nerd Font Mono
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-# symbol_map
+symbol_map U+0E00-U+0E7F Noto Sans Thai Cond
 
 #: E.g. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
@@ -74,8 +73,7 @@ font_family      FiraCode Nerd Font Mono
 #: This option can be specified multiple times. The syntax is::
 
 #:     narrow_symbols codepoints [optionally the number of cells]
-
-# disable_ligatures never
+disable_ligatures never
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them. You can tell kitty to not render
@@ -162,6 +160,11 @@ font_family      FiraCode Nerd Font Mono
 #:     modify_font underline_position -2
 #:     modify_font underline_thickness 150%
 #:     modify_font strikethrough_position 2px
+modify_font baseline 0
+modify_font cell_height +5px
+modify_font underline_position +2
+modify_font underline_thickness 150%
+modify_font strikethrough_position 2px
 
 #: Additionally, you can modify the size of the cell in which each
 #: font glyph is rendered and the baseline at which the glyph is
@@ -873,7 +876,7 @@ font_family      FiraCode Nerd Font Mono
 #: insensitive, from the set [0-9A-Z]. Specify your preference as a
 #: string of characters.
 
-# confirm_os_window_close -1
+confirm_os_window_close 0
 
 #: Ask for confirmation when closing an OS window or a tab with at
 #: least this number of kitty windows in it by window manager (e.g.
@@ -1054,9 +1057,8 @@ font_family      FiraCode Nerd Font Mono
 #: }}}
 
 #: Color scheme {{{
-
-background: #24273A
-foreground: #F8F8F2
+# background: #24273A
+# foreground: #F8F8F2
 
 #: The foreground and background colors.
 
@@ -1138,43 +1140,35 @@ foreground: #F8F8F2
 #: The 256 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version, for the first 16 colors. You can set the
 #: remaining 240 colors as color16 to color255.
-
-color0 #212126
+# color0 #212126
 # color8 #767676
 
 #: black
-
-color1 #cc7a7a
+# color1 #cc7a7a
 # color9 #f2201f
 
 #: red
-
-color2  #b1cc7a
+# color2  #b1cc7a
 # color10 #23fd00
 
 #: green
-
-color3  #cca37a
+# color3  #cca37a
 # color11 #fffd00
 
 #: yellow
-
-color4  #7a96cc
+# color4  #7a96cc
 # color12 #1a8fff
 
 #: blue
-
-color5  #b886d1
+# color5  #b886d1
 # color13 #fd28ff
 
 #: magenta
-
-color6  #7ab1cc
+# color6  #7ab1cc
 # color14 #14ffff
 
 #: cyan
-
-color7  #f2e0ce
+# color7  #f2e0ce
 # color15 #ffffff
 
 #: white
@@ -1209,7 +1203,7 @@ color7  #f2e0ce
 
 #: Advanced {{{
 
-# shell .
+shell /bin/fish
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
@@ -2336,3 +2330,17 @@ linux_display_server auto
 
 #: }}}
 
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Mocha
+include current-theme.conf
+# END_KITTY_THEME
+
+
+# BEGIN_KITTY_FONTS
+# font_family      family='Miriam Mono CLM' style=Book
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font family='Miriam Mono CLM' style=BoldOblique
+# END_KITTY_FONTS
