--- a/files/ranger/rc.conf
+++ b/files/ranger/rc.conf
@@ -9,7 +9,7 @@ set vcs_aware false
 # Use one of the supported image preview protocols
 set preview_images true
 
-set preview_images_method ueberzug
+set preview_images_method kitty
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis true
@@ -47,9 +47,6 @@ set column_ratios 2,2,4
 
 # Hidden filter
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
-
-# Color scheme
-set colorscheme default
 
 # ===================================================================
 # == Local Options
