--- a/files/kitty/current-theme.conf
+++ b/files/kitty/current-theme.conf
@@ -10,13 +10,13 @@
 
 # The basic colors
 foreground              #CDD6F4
-background              #1E1E2E
-selection_foreground    #1E1E2E
+background              #181819
+selection_foreground    #181819
 selection_background    #F5E0DC
 
 # Cursor colors
 cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
+cursor_text_color       #181819
 
 # URL underline color when hovering with mouse
 url_color               #F5E0DC
